--- a/tools/demo/app.json
+++ b/tools/demo/app.json
@@ -5,7 +5,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "fmin-ui",
     "navigationBarTextStyle":"black"
   }
 }
