test to publish npm, and work success

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fm-miniprogram-components",
-  "version": "0.0.1",
-  "description": "",
+  "name": "fmin-ui",
+  "version": "0.0.2",
+  "description": "an easy UI library",
   "main": "miniprogram_dist/index.js",
   "scripts": {
     "dev": "gulp dev --develop",
